<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.basistech.m2e-code-quality</groupId>
    <artifactId>m2e-code-quality-plugins</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <scm>
        <connection>scm:git:git://github.com/m2e-code-quality/m2e-code-quality.git</connection>
        <url>scm:git:git://github.com/m2e-code-quality/m2e-code-quality.git</url>
    </scm>
    <properties>
        <tycho-version>0.20.0</tycho-version>
        <orbit.version>R20120526062928</orbit.version>
        <main.basedir>${basedir}</main.basedir>
        
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <maven.compiler.source>1.6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>
    </properties>
    <modules>
        <module>com.basistech.m2e.code.quality.shared</module>
        <module>com.basistech.m2e.code.quality.checkstyle</module>
        <module>com.basistech.m2e.code.quality.checkstyle.feature</module>
        <module>com.basistech.m2e.code.quality.checkstyle.test</module>
        <module>com.basistech.m2e.code.quality.findbugs</module>
        <module>com.basistech.m2e.code.quality.findbugs.feature</module>
        <module>com.basistech.m2e.code.quality.findbugs.test</module>
        <module>com.basistech.m2e.code.quality.pmd</module>
        <module>com.basistech.m2e.code.quality.pmd.feature</module>
        <module>com.basistech.m2e.code.quality.site</module>
    </modules>
    <prerequisites>
        <maven>3.0</maven>
    </prerequisites>
    <repositories>
        <repository>
            <id>m2e</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/technology/m2e/releases</url>
        </repository>
        <repository>
            <id>kepler</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/releases/kepler</url>
        </repository>
        <repository>
            <id>cs</id>
            <layout>p2</layout>
            <url>http://m2e-code-quality.github.com/m2e-code-quality/checkstyle-p2-repository</url>
        </repository>
        <repository>
            <id>pmd</id>
            <layout>p2</layout>
            <url>http://sourceforge.net/projects/pmd/files/pmd-eclipse/update-site</url>
        </repository>
        <repository>
            <id>findbugs</id>
            <layout>p2</layout>
            <url>http://m2e-code-quality.github.com/m2e-code-quality/findbugs-p2-repository</url>
        </repository>
        <repository>
            <id>orbit</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/tools/orbit/downloads/drops/${orbit.version}/repository/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>sonatype-public</id>
            <url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>
    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <resolver>p2</resolver>
                    <pomDependencies>consider</pomDependencies>
                    <ignoreTychoRepositories>true</ignoreTychoRepositories>
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>maven-osgi-lifecycle-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-packaging-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <!-- workaround for TYCHO-349 or TYCHO-313 -->
                        <strictVersions>false</strictVersions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-surefire-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <useUIHarness>true</useUIHarness>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                        <argLine>${tycho.test.jvmArgs}</argLine>
                        <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>
                <!-- important for self-hosting -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>sun-jvm</id>
            <activation>
                <property>
                    <name>java.vendor.url</name>
                    <value>http://java.sun.com/</value>
                </property>
            </activation>
            <properties>
                <tycho.test.jvmArgs><![CDATA[-Xmx800m -XX:MaxPermSize=256m]]></tycho.test.jvmArgs>
            </properties>
        </profile>
        <profile>
            <id>osx</id>
            <activation>
                <property>
                    <name>java.vendor.url</name>
                    <value>http://www.apple.com/</value>
                </property>
            </activation>
            <properties>
                <tycho.test.jvmArgs><![CDATA[-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread]]></tycho.test.jvmArgs>
                <osgi.ws>cocoa</osgi.ws>
            </properties>
        </profile>
        <profile>
            <id>sign</id>
            <activation>
                <property>
                    <name>jarsigner.alias</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jarsigner-plugin</artifactId>
                        <version>1.3.2</version>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
